--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -212,9 +212,10 @@
         justify-content: center;
     }
 
-    /* Ensure hamburger is reachable */
+    /* Ensure hamburger is reachable & avoids notch */
     .hamburgerBtn {
-        top: 1.5rem;
+        top: 3rem;
+        /* Dynamic Island Safe Area */
         right: 1.5rem;
         width: 50px;
         height: 50px;
